# IsohypsesWallpaper

./: .gitignore  README.md  poetry.toml  pyproject.toml
docs/: Installation.md  Roadmap.md  Usage.md
src/isohypseswallpaper/: cli.py  geometry.py  metadata.py  presets.py  scale.py  srtm.py  themes.py  wallpaper.py
tests/: test_cli.py  test_cli_presets.py  test_geometry.py  test_metadata.py  test_scale.py  test_smoke.py  test_srtm.py  test_wallpaper.py
