[project]
name = "isohypses-wallpaper"
version = "0.2.0"
description = "Generate desktop wallpapers from topographic contour lines"
authors = [
    {name = "Ivan Palmegiani",email = "ivan.palmegiani@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "rasterio (>=1.5.0,<2.0.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "elevation (>=1.1.3,<2.0.0)",
    "scipy (>=1.17.0,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "isohypseswallpaper", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[project.scripts]
isohypses-wallpaper = "isohypseswallpaper.cli:main"
